unifont (1:5.1.20080914-1.3) unstable; urgency=low

  * Non-maintainer upload.
  * debian/rules: Split and inline "install" target into "binary-arch" and
    "binary-indep" and adjust dependencies.  (Without this,
    "dpkg-buildpackage -B" ends up running the build-indep rules and dying
    on the buildds.)

 -- Samuel Bronson <naesten@gmail.com>  Sat, 12 Jan 2013 13:09:44 -0500

unifont (1:5.1.20080914-1.2) unstable; urgency=low

  [ Samuel Bronson ]
  * Non-maintainer upload.
  * Actually build the font files, using build-arch and build-indep to
    avoid killing any buildds. (Closes: #697902)
  * Don't include bogus glyphs for unallocated (as of Unicode 5.1) or
    private-use characters. (Closes: #584672)

  [ Paul Wise ]
  * Place the newly compiled fonts in precompiled dir after build.

 -- Samuel Bronson <naesten@gmail.com>  Thu, 10 Jan 2013 20:15:33 -0500

unifont (1:5.1.20080914-1.1) unstable; urgency=low

  * Non-maintainer upload to achieve release goal of getting rid
    of defoma.

 -- Christian Perrier <bubulle@debian.org>  Wed, 20 Jul 2011 22:14:06 +0200

unifont (1:5.1.20080914-1) unstable; urgency=low

  * Changed unifont.ttf location in defoma-hints file. (Closes: #498874)
  * Modified src/hex2sfd to superimpose combining diacritical marks on
    top of preceding glyphs in TrueType font as per the Unicode Standard.
    (Closes: #497326)
  * Modified "cp -a" ==> "cp -p" and eliminated "install -t" in Makefiles
    for BSD Unix compatibility.
  * Renamed "combining.txt" to "combining.dat" because it is a data file.
  * Generated new font/precompiled/unifont.ttf font from the above changes.

 -- Paul Hardy <unifoundry@unifoundry.com>  Sun,  7 Sep 2008 23:09:17 -0700

unifont (1:5.1.20080820-1) unstable; urgency=low

  * Replaced Hangul Syllables block with glyphs in unifont.bdf file
    in Debian bf-utf-source package, originally from the Debian
    xfonts-baekmuk package (Closes: #495729)